--- a/src/CtrlMoney.UI.Web/Views/Shared/_Layout.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/Shared/_Layout.cshtml
@@ -25,6 +25,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <link href="~/admin-lte/css/adminlte.css" rel="stylesheet" />
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+    <!-- jQuery -->
+    <script src="~/lib/jquery/jquery.min.js"></script>
 </head>
 <body class="hold-transition sidebar-mini">
     <div class="wrapper">
@@ -240,8 +242,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     </div>
     <!-- ./wrapper -->
     <!-- REQUIRED SCRIPTS -->
-    <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
+
     <!-- Bootstrap 4 -->
     <script type="text/javascript" src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
