--- a/src/CtrlMoney.UI.Web/Views/Shared/_Layout.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/Shared/_Layout.cshtml
@@ -25,6 +25,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <link href="~/admin-lte/css/adminlte.css" rel="stylesheet" />
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+
+    <!-- BootStrap Tree View-->
+    <link href="~/lib/bootstrap-treeview/bootstrap-treeview.min.css" rel="stylesheet" />
+
+
     <!-- jQuery -->
     <script src="~/lib/jquery/jquery.min.js"></script>
 </head>
@@ -242,7 +247,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
     </div>
     <!-- ./wrapper -->
     <!-- REQUIRED SCRIPTS -->
-
     <!-- Bootstrap 4 -->
     <script type="text/javascript" src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
@@ -253,13 +257,15 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <script type="text/javascript" src="~/lib/datatables/js/dataTables.responsive.min.js"></script>
     <script type="text/javascript" src="~/lib/datatables/js/responsive.bootstrap4.min.js"></script>
 
+
+    <script src="~/lib/bootstrap-treeview/bootstrap-treeview.min.js"></script>
+
     <!-- CtrlMoney App -->
     <script src="~/admin-lte/js/adminlte.min.js"></script>
     <!-- AdminLTE for demo purposes -->
     <script src="~/admin-lte/js/demo.js"></script>
     <!-- Select2 -->
     <script src="~/lib/select2/js/select2.full.min.js"></script>
-
     <!-- page script -->
     <script>
         $(function () {
