--- a/src/CtrlMoney.UI.Web/Views/Shared/_Layout.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
     <!-- BootStrap Tree View-->
-    <link href="~/lib/bootstrap-treeview/bootstrap-treeview.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-treeview/1.2.0/bootstrap-treeview.min.css" />
 
 
     <!-- jQuery -->
@@ -257,9 +257,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <script type="text/javascript" src="~/lib/datatables/js/dataTables.responsive.min.js"></script>
     <script type="text/javascript" src="~/lib/datatables/js/responsive.bootstrap4.min.js"></script>
 
-
-    <script src="~/lib/bootstrap-treeview/bootstrap-treeview.min.js"></script>
-
+    
+    <script src="~/lib/bootstrap-treeview/bootstrap-treeview.js"></script>
     <!-- CtrlMoney App -->
     <script src="~/admin-lte/js/adminlte.min.js"></script>
     <!-- AdminLTE for demo purposes -->
