--- a/src/CtrlMoney.UI.Web/Views/Shared/_Layout.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <link href="~/admin-lte/css/adminlte.css" rel="stylesheet" />
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
-
+    <link href="~/lib/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet" />
     <!-- BootStrap Tree View-->
     @*<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-treeview/1.2.0/bootstrap-treeview.min.css" />*@
 
@@ -257,7 +257,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <script type="text/javascript" src="~/lib/datatables/js/dataTables.responsive.min.js"></script>
     <script type="text/javascript" src="~/lib/datatables/js/responsive.bootstrap4.min.js"></script>
 
-    
     <script src="~/lib/bootstrap-treeview/bootstrap-treeview.js"></script>
     <!-- CtrlMoney App -->
     <script src="~/admin-lte/js/adminlte.min.js"></script>
@@ -265,6 +264,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <script src="~/admin-lte/js/demo.js"></script>
     <!-- Select2 -->
     <script src="~/lib/select2/js/select2.full.min.js"></script>
+
+
     <!-- page script -->
     <script>
         $(function () {
