--- a/src/CtrlMoney.UI.Web/Views/Shared/_Layout.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/Shared/_Layout.cshtml
@@ -242,7 +242,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 Anything you want
             </div>
             <!-- Default to the left -->
-            <strong>Copyright &copy; 2014-2019 <a href="#">CtrlMoney.io</a>.</strong> All rights reserved.
+            <strong>Copyright &copy; 2020 <a href="#">CtrlMoney.io</a>.</strong> All rights reserved.
         </footer>
     </div>
     <!-- ./wrapper -->
