--- a/src/CtrlMoney.UI.Web/Views/Transaction/AddTransaction.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/Transaction/AddTransaction.cshtml
@@ -91,8 +91,8 @@
                         <div class="card-body">
                             <!-- select -->
                             <div class="form-group">
-                                <label>Tipo movimntação</label>
-                                <select class="form-control">
+                                <label>Tipo movimentação</label>
+                                <select class="form-control select2">
                                     <option>Gasto</option>
                                     <option>Investimento</option>
                                     <option>Transferência</option>
