--- a/src/CtrlMoney.UI.Web/Views/Register/Banks.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/Register/Banks.cshtml
@@ -45,7 +45,7 @@
                                 <div class="col-12 col-sm-6">
                                     <div class="form-group">
                                         <div class="select2-purple">
-                                            <select id="slt2Banks" class="select2" multiple="multiple" data-placeholder="Select a State" data-dropdown-css-class="select2-purple" style="width: 100%;" id="bankCode" asp-items="@((List<SelectListItem>)ViewData["ListBanks"])"></select>
+                                            <select id="slt2Banks" class="select2" multiple="multiple" data-placeholder="Select a State" data-dropdown-css-class="select2-purple" style="width: 100%;" asp-items="@((List<SelectListItem>)ViewData["ListBanks"])"></select>
                                         </div>
                                     </div>
                                     <!-- /.form-group -->
@@ -110,17 +110,15 @@
         $('#tbBanks').dataTable({
             "sAjaxSource": '/Register/GetAjaxHandlerMyBanks',
             "bProcessing": true,
+            "bServerSide": true,
             "bDestroy": true,
             "aoColumns": [
-                //{
-                //    data: function (row, type, set) {
-                //        if (type === 'display') {
-                //            return row.Name;
-                //        }
-                //    }
-                //},
                 {
-                    "mData": "Name"
+                    data: function (row, type, set) {
+                        if (type === 'display') {
+                            return row.Name;
+                        }
+                    }
                 },
                 {
                     "mData": "BankCode",
@@ -136,6 +134,7 @@
                     "defaultContent": "<i>Edit Not set</i>",
                 },
                 {
+                    "mData": null,
                     "bSortable": false,
                     "defaultContent": "<i>Edit Not set</i>",
                 }
