--- a/src/CtrlMoney.UI.Web/Views/Transaction/AddTransaction.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/Transaction/AddTransaction.cshtml
@@ -68,12 +68,9 @@
                             <!-- select -->
                             <div class="form-group">
                                 <label>Tipo movimentação</label>
-                                <select class="form-control select2">
-                                    <option>Despesa</option>
-                                    <option>Investimento</option>
-                                    <option>Transferência</option>
-                                    <option>Receita</option>
-                                </select>
+                                <div class="select2-gray">
+                                    <select id="slt2TransactionTypes" class="select2" data-placeholder="Select a type" data-dropdown-css-class="select2-gray" style="width: 100%;" asp-items="@((List<SelectListItem>)ViewData["TransactionTypes"])"></select>
+                                </div>
                             </div>
                             <div class="form-group">
                                 <label>Banco</label>
